@@ -1,5 +1,7 @@
 === SVN
 
+* Fixed Dataset#count to work correctly for grouped datasets (#144).
+
 * Added Dataset#select_more, Dataset#order_more methods (#129).
 
 === 1.0.5 (2008-01-25)
